plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.88'
    id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

base {
    archivesName = "[${project.minecraft_version}-NeoForge] ${project.mod_name}"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
		
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            clientData()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    mavenLocal()
    flatDir {
        dir 'libs'
    }
    maven {
        url "https://cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        name "ModMaven"
        url "https://modmaven.dev"
    }
    maven { url = "https://maven.createmod.net" } // Create, Ponder, Flywheel
    maven { url = "https://mvn.devos.one/snapshots" } // Registrate
    maven { url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/" }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    implementation  "curse.maven:balm-531761:${project.balm_file}"
    compileOnly  "curse.maven:double-slabs-350179:${project.doubleslabs_file}"
    implementation  "curse.maven:kleeslabs-241895:${project.kleeslabs_file}"
    compileOnly "curse.maven:ctm-267602:${project.ctm_file}" //Connected Textures Mod

    compileOnly("com.simibubi.create:create-${project.create_mc_version}:${project.create_version}:slim") { transitive = false }
    //implementation("com.simibubi.create:create-${project.minecraft_version}:${project.create_version}:slim") { transitive = false }
    //implementation("net.createmod.ponder:Ponder-NeoForge-${project.create_mc_version}:${project.ponder_version}")
    //compileOnly("dev.engine-room.flywheel:flywheel-neoforge-api-${project.create_mc_version}:${project.flywheel_version}")
    //runtimeOnly("dev.engine-room.flywheel:flywheel-neoforge-${project.create_mc_version}:${project.flywheel_version}")
    //implementation("com.tterrag.registrate:Registrate:${project.registrate_version}")

    compileOnly "local:fabric-renderer-api-v1:${project.fabric_version}" // Jar extracted from forgified-fabric, META-INF/neoforge.mods.toml removed to prevent it from being loaded as a mod
    compileOnly "local:continuity:${project.continuity_version}" //Fabric mods don't properly deobfuscate, so we use a deobfuscated jar from a fabric MDK
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version, 
			minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifactId = "${project.mod_id}-neoforge-${project.minecraft_version}"
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

idea.module { downloadJavadoc = downloadSources = true }
